--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -1,181 +1,45 @@
-@media screen and (max-width: 1000px) and (min-width: 601px){
-  .logo-name {
+@media screen and (max-width: 800px) {
+  body {
+    background-color: rgb(76, 134, 233);
+  }
+
+  .footer{
     display: none;
   }
-  .navbar {
-    justify-content: space-around;
-    padding: 0;
-  }
 
-  .about-navbar{
-    padding: 25px 0;
-  }
-
-  .card-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .hard-skill-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .hard-skill-card {
-    align-items: center;
-    justify-content: center;
-    margin: 40px auto;
-  }
-
-  .grid-center {
-    grid-column: span 2;
-  }
-
-  .footer-container {
-    flex-direction: column;
-  }
-
-  .bio{
-    flex-direction: column;
-    padding: 0;
-
-    img {
-      margin: 5%;
-      max-width: 250px;
-    }
-
-    .bio-text-container{
-     p{ 
-      width: 100%;
-      text-align: center;
-      padding: 0 10%;
-     }
-    }
-  }
-
-  .form-container{
-    width: 80%;
-    margin: 10%;
-  }
 }
 
 
-@media screen and (max-width: 600px) {
-  .logo-container {
-    display: none;
+@media screen and (max-width: 450px) {
+  body {
+    background-color: rgb(88, 82, 15);
   }
 
-  .logo{
-    height: 40px;
+  .life-counter{
+    flex-direction: column;
+    position: relative;
   }
 
-  .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 70px;
-    background-color: $primary-color;
-    z-index: 100;
-    justify-content: space-around;
-  }
-  .menu {
-    display: none;
+  .navbar{
+    font-size: 14px;
+    height: 60px;
 
-    li {
+    .title{
       display: none;
     }
   }
 
-  .menu-icon {
-    display: block;
-    z-index: 200;
+  button {
+    scale: 0.9;
   }
 
-  .nav-links {
-    display: flex;
-    width: 100%;
-    position: relative;
-    justify-content: center;
+  #set-starting-life {
+    width: 30px;
   }
 
-  #menu-toggle {
+  .footer{
     display: none;
-    z-index: 150;
   }
 
-  #menu-toggle:checked ~ .menu {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    background-color: $primary-color;
-    left: 0;
-    right: 0;
-    top: 80%;
-    padding: 10px;
 
-     li{
-      display: block;
-      background-color: $primary-color;
-      margin: 20px 0;
-     }
-  }
-
-  #menu-toggle:checked ~ .menu li {
-    margin-left: 0;
-    margin-bottom: 10px;
-  }
-
-  .navbar {
-    justify-content: center;
-    padding: 0;
-  }
-
-  .about-navbar{
-    padding: 25px 0;
-  }
-
-  .card-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .footer-container {
-    flex-direction: column;
-    h5{
-      font-size: 18px;
-      padding: 20px 0 0 0;
-    }
-  }
-
-  .main-about {
-    margin: 70px 0 0 0;
-  }
-
-  .bio{
-    flex-direction: column;
-    padding: 0;
-
-    img {
-      margin: 5%;
-      max-width: 250px;
-    }
-
-    .bio-text-container{
-     p{ 
-      width: 100%;
-      text-align: center;
-      padding: 0 10%;
-     }
-    }
-  }
-
-  .form-container{
-    width: 80%;
-    margin: 10%;
-    padding: 10%;
-    text-align: center;
-  }
 }
